--- a/tinyNN_FromScratch.ipynb
+++ b/tinyNN_FromScratch.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "tinyNN_FromScratch.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNQnc0q+m6WR0otHaaCQsuv"
     },
     "kernelspec": {
       "name": "python3",
@@ -36,7 +37,7 @@
         "from keras.models import Sequential\n",
         "from keras.layers import Dense"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +65,7 @@
         "                   \n",
         "y_train = np.array([1,0,0,1,1,0])\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +109,7 @@
         "\n",
         "scaler = scale()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +125,7 @@
         "print(\"MEAN = {}\".format(scaler.mean(x_train)))\n",
         "print(\"STD = {}\".format(scaler.std(x_train)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +151,7 @@
         "\n",
         "print(x_train)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +198,7 @@
         "#                     [0,1]])\n",
         "     "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,6 +211,13 @@
         "  def __init__(self):\n",
         "    \n",
         "    np.random.seed(1)\n",
+        "\n",
+        "    #just FYI the human brain has 100 billion neurons - each neuron is\n",
+        "    #connected to 10,000 other neurons. that equates to 5000 neurons per\n",
+        "    #layer with 100billion/5000 layers. (20 million layers)\n",
+        "\n",
+        "    #don't build AI by copying the brain exactly but focus on the pricipals of AGI\n",
+        "    #which are the Architecture, representations and the algorithms\n",
         "\n",
         "    self.w1 = (2 * np.random.rand(2,1000)) - 1\n",
         "    self.w2 = (2 * np.random.rand(1000,1)) - 1\n",
@@ -270,7 +278,7 @@
         "\n",
         "garvis = tinyNN()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +307,7 @@
         "\n",
         "print(outputs)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
